# serializer version: 1
# name: test_compute_image_embeddings_single_batch
  dict({
    'embedding_dimension': 6,
    'embedding_dtype': 'float32',
    'embedding_norms': list([
      0.9999999403953552,
      1.0,
      1.0,
      1.0,
      1.0,
      0.9999999403953552,
      1.0,
      1.0,
      1.0,
    ]),
    'embedding_shapes': list([
      tuple(
        6,
      ),
      tuple(
        6,
      ),
      tuple(
        6,
      ),
      tuple(
        6,
      ),
      tuple(
        6,
      ),
      tuple(
        6,
      ),
      tuple(
        6,
      ),
      tuple(
        6,
      ),
      tuple(
        6,
      ),
    ]),
    'embedding_values': list([
      list([
        0.4825541377067566,
        0.5013473033905029,
        0.5116933584213257,
        0.2700468599796295,
        0.2948189675807953,
        0.3067876696586609,
      ]),
      list([
        0.3979630470275879,
        0.4076855182647705,
        0.4672101140022278,
        0.3788158595561981,
        0.38035187125205994,
        0.411051869392395,
      ]),
      list([
        0.40621417760849,
        0.4237518608570099,
        0.42235177755355835,
        0.39890703558921814,
        0.39906004071235657,
        0.39833104610443115,
      ]),
      list([
        0.4694303870201111,
        0.4694303870201111,
        0.4694303870201111,
        0.3361077904701233,
        0.3361077904701233,
        0.3361077904701233,
      ]),
      list([
        0.520820140838623,
        0.5110766887664795,
        0.43892204761505127,
        0.31178703904151917,
        0.31369560956954956,
        0.28156420588493347,
      ]),
      list([
        0.3058488965034485,
        0.25643190741539,
        0.5879448056221008,
        0.45111361145973206,
        0.3998323082923889,
        0.36283689737319946,
      ]),
      list([
        0.6005426645278931,
        0.5368449091911316,
        0.40097934007644653,
        0.27653586864471436,
        0.24665617942810059,
        0.2303265631198883,
      ]),
      list([
        0.4417613744735718,
        0.44894421100616455,
        0.4267692267894745,
        0.4033930003643036,
        0.38190412521362305,
        0.3355403542518616,
      ]),
      list([
        0.5120797157287598,
        0.4622848331928253,
        0.4283306300640106,
        0.3522045314311981,
        0.3466721475124359,
        0.31043586134910583,
      ]),
    ]),
    'image_filenames': list([
      '01_golden_gate_bridge.jpg',
      '02_earth_from_space.jpg',
      '03_forest_path.jpg',
      '04_mountain_view.jpg',
      '05_city_skyline.jpg',
      '06_nature_close_up.jpg',
      '07_street_scene.jpg',
      '08_abstract_pattern.jpg',
      '09_urban_details.jpg',
    ]),
    'num_embeddings': 9,
  })
# ---
# name: test_compute_image_embeddings_small_batches
  dict({
    'batch_size_used': 3,
    'embedding_dimension': 6,
    'embedding_values': list([
      list([
        0.4825541377067566,
        0.5013473033905029,
        0.5116933584213257,
        0.2700468599796295,
        0.2948189675807953,
        0.3067876696586609,
      ]),
      list([
        0.3979630470275879,
        0.4076855182647705,
        0.4672101140022278,
        0.3788158595561981,
        0.38035187125205994,
        0.411051869392395,
      ]),
      list([
        0.40621417760849,
        0.4237518608570099,
        0.42235177755355835,
        0.39890703558921814,
        0.39906004071235657,
        0.39833104610443115,
      ]),
      list([
        0.4694303870201111,
        0.4694303870201111,
        0.4694303870201111,
        0.3361077904701233,
        0.3361077904701233,
        0.3361077904701233,
      ]),
      list([
        0.520820140838623,
        0.5110766887664795,
        0.43892204761505127,
        0.31178703904151917,
        0.31369560956954956,
        0.28156420588493347,
      ]),
      list([
        0.3058488965034485,
        0.25643190741539,
        0.5879448056221008,
        0.45111361145973206,
        0.3998323082923889,
        0.36283689737319946,
      ]),
      list([
        0.6005426645278931,
        0.5368449091911316,
        0.40097934007644653,
        0.27653586864471436,
        0.24665617942810059,
        0.2303265631198883,
      ]),
      list([
        0.4417613744735718,
        0.44894421100616455,
        0.4267692267894745,
        0.4033930003643036,
        0.38190412521362305,
        0.3355403542518616,
      ]),
      list([
        0.5120797157287598,
        0.4622848331928253,
        0.4283306300640106,
        0.3522045314311981,
        0.3466721475124359,
        0.31043586134910583,
      ]),
    ]),
    'num_embeddings': 9,
  })
# ---
# name: test_compute_text_embeddings
  dict({
    'embedding_dimension': 6,
    'embedding_dtype': 'float32',
    'embedding_norms': list([
      0.9999999403953552,
      1.0,
      1.0,
      0.9999999403953552,
      1.0,
      0.9999999403953552,
      0.9999999403953552,
      0.9999999403953552,
      1.0,
    ]),
    'embedding_values': list([
      list([
        0.39276543259620667,
        0.3342684507369995,
        0.5142591595649719,
        0.49095675349235535,
        0.28412818908691406,
        0.38440871238708496,
      ]),
      list([
        0.4372265338897705,
        0.38578811287879944,
        0.4946001470088959,
        0.3643554151058197,
        0.2829112708568573,
        0.4500861167907715,
      ]),
      list([
        0.40310201048851013,
        0.38759809732437134,
        0.5366743206977844,
        0.40310201048851013,
        0.24806277453899384,
        0.4186059534549713,
      ]),
      list([
        0.35400786995887756,
        0.21240472793579102,
        0.517396092414856,
        0.5900130867958069,
        0.21240472793579102,
        0.4106491208076477,
      ]),
      list([
        0.37723690271377563,
        0.2958720922470093,
        0.5405355095863342,
        0.47154611349105835,
        0.17752324044704437,
        0.47339531779289246,
      ]),
      list([
        0.3662179112434387,
        0.2980843484401703,
        0.5568608641624451,
        0.5231684446334839,
        0.2555008828639984,
        0.35770121216773987,
      ]),
      list([
        0.3461601734161377,
        0.28846681118011475,
        0.6022933721542358,
        0.4945145845413208,
        0.21428963541984558,
        0.3791278302669525,
      ]),
      list([
        0.3477404713630676,
        0.226787269115448,
        0.5233551859855652,
        0.5795674324035645,
        0.1965489387512207,
        0.4233362078666687,
      ]),
      list([
        0.3669673204421997,
        0.22467388212680817,
        0.4608694911003113,
        0.6116122007369995,
        0.2546303868293762,
        0.40441298484802246,
      ]),
    ]),
    'input_captions': list([
      'A beautiful golden gate bridge in San Francisco',
      'Planet Earth as seen from space showing blue oceans and white clouds',
      'A peaceful forest path with tall trees on both sides',
      'Stunning mountain landscape with snow-capped peaks',
      'Modern city skyline with tall skyscrapers at sunset',
      'Close-up view of colorful flowers in nature',
      'Busy street scene with people and vehicles',
      'Abstract geometric pattern with vibrant colors',
      'Urban architectural details and building textures',
    ]),
    'num_embeddings': 9,
  })
# ---
# name: test_generate_captions_from_image_embeddings
  dict({
    'caption_lengths': list([
      49,
      49,
      53,
      54,
      48,
      49,
      32,
      53,
      48,
    ]),
    'captions': list([
      'An image with varied blue tones like sky or water',
      'An image with varied blue tones like sky or water',
      'An image with varied green tones and natural elements',
      'A colorful image with balanced tones and high contrast',
      'An image with varied red tones and high contrast',
      'An image with varied blue tones like sky or water',
      'An image dominated by red colors',
      'An image with varied green tones and natural elements',
      'An image with varied red tones and high contrast',
    ]),
    'image_filenames': list([
      '01_golden_gate_bridge.jpg',
      '02_earth_from_space.jpg',
      '03_forest_path.jpg',
      '04_mountain_view.jpg',
      '05_city_skyline.jpg',
      '06_nature_close_up.jpg',
      '07_street_scene.jpg',
      '08_abstract_pattern.jpg',
      '09_urban_details.jpg',
    ]),
    'num_captions': 9,
  })
# ---
